2018-07-24  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (compare_unalloc_sections): Also compare sh_size.

2018-07-21  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (adjust_all_relocs): Skip SHT_GROUP sections.

2018-07-21  Mark Wielaard  <mark@klomp.org>

	* elfcompress.c (get_sections): New function.
	(process_file): Check whether section needs to change. Don't rewrite
	file if no section data needs changing.
	(main): Update 'force' help text.

2018-07-21  Mark Wielaard  <mark@klomp.org>

	* elfcompress.c (process_file): Swap fchmod and fchown calls.

2018-07-04  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_addr_section): Rename index var to uidx.
	(attr_callback): Rename index var to word.
	(print_debug_str_offsets_section): Rename index var to uidx.

2018-07-04  Ross Burton <ross.burton@intel.com>

	* addr2line.c: Remove error.h include.
	* ar.c: Likewise.
	* arlib.c: Likewise and add system.h include.
	* arlib2.c: Likewise.
	* elfcmp.c: Likewise.
	* elfcompress.c: Likewise.
	* elflint.c: Likewise.
	* findtextrel.c: Likewise.
	* nm.c: Likewise.
	* objdump.c: Likewise.
	* ranlib.c: Likewise.
	* readelf.c: Likewise.
	* stack.c: Likewise.
	* strings.c: Likewise.
	* strip.c: Likewise.
	* unstrip.c: Likewise.

2018-06-25  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_decoded_line_section): Use dwarf_next_lines
	instead of dwarf_nextcu.
	(print_debug_line_section): Don't explicitly lookup CU.

2018-06-15  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Only print block as expressions if it
	isn't DW_FORM_data16.

2018-06-12  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_form_data): Check we have 4, not 2, bytes
	available for DW_FORM_block4.

2018-06-12  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_form_data): Don't increase strreadp after use.
	Do increase readp for DW_FORM_strx[1234].

2018-06-16  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_loc_section): Make sure next_off doesn't
	overflow d_buf.
